
# The project's basic metadata and dependencies
[project]

# General project information, the Project supports Python 3.7, 3.8, and 3.9; the version of the project is automatically determined from the latest
# Git tag using the Hatch-VCS plugin and the read me is dynamically generated using the Hatch Fancy PyPI Readme plugin (this  is necessary, because
# Hatch cannot access the root directory of the repository while building the wheel, which is where the read me is located; Hatch first builds the
# source distribution from the files in the project directory, from where it can access top-level repository files, and then builds the wheel from the
# source distribution by extracting it into a temporary directory, from where it cannot access the top-level repository files)
name = "corelay"
description = """\
    CoRelAy is a tool to compose small-scale (single-machine) analysis pipelines to generate analysis data which can then be visualized using
    ViRelAy.\
    """
keywords = [
    "CoRelAy",
    "Spectral Relevance Analysis",
    "SpRAy",
    "Explainable AI",
    "XAI",
    "Interpretability",
    "Machine Learning",
    "Deep Learning",
    "Artificial Intelligence"
]
license = "GPL-3.0-or-later AND LGPL-3.0-or-later"
requires-python = ">=3.8"
dynamic = [
    "readme",
    "version"
]

# The maintainers (people actively working on the project) and authors (people who have contributed to the project)
maintainers = [
    {name = "Christopher J. Anders", email = "contact@cjanders.de"},
    {name = "David Neumann", email = "david.neumann@lecode.de"}
]
authors = [
    {name = "Christopher J. Anders", email = "contact@cjanders.de"},
    {name = "David Neumann", email = "david.neumann@lecode.de"},
    {name = "Sebastian Lapuschkin", email = "sebastian.lapuschkin@hhi.fraunhofer.de"},
    {name = "Pattarawat Chormai", email = "pat.chormai@gmail.com"}
]

# The project's dependencies, which are included in the requirements of the published package
dependencies = [
    "Click>=7.0,<8.0.0",
    "h5py>=3.0.0,<4.0.0",
    "matplotlib>=3.0.3,<4.0.0",
    "metrohash-python>=1.1.3.post2,<2.0.0",
    "numpy>=1.16.3,<2.0.0",
    "scikit-image>=0.18.0,<1.0.0",
    "scikit-learn>=0.20.3,<1.0.0",
    "scipy>=1.2.1,<2.0.0"
]

# The PyPI classifiers that describe the project
classifiers = [
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed"
]

# The URLs to the documentation, the repository, the issue tracker, and the changelog
[project.urls]
Documentation = "https://corelay.readthedocs.io/en/latest/"
Repository = "https://github.com/virelay/corelay.git"
Issues = "https://github.com/virelay/corelay/issues"
Changelog = "https://github.com/virelay/corelay/blob/main/CHANGELOG.md"

# Configuration specified to the UV Python package manager
[tool.uv]

# Dependencies that are only installed during the development of the project and are not included in the requirements of the published package
dev-dependencies = [

    # Dependencies required for building the documentation
    "sphinx>=4.2.0,<5.0.0",
    "sphinx-copybutton>=0.4.0,<1.0.0",
    "sphinx-rtd-theme>=1.0.0,<2.0.0",
    "sphinxcontrib.bibtex>=2.4.1,<3.0.0",
    "sphinxcontrib.datatemplates>=0.9.0,<1.0.0",

    # Dependencies required for testing
    "tox>=4.12.1,<5.0.0",
    "tox-uv>=1.0.0,<2.0.0",
    "coverage>=5.5.0,<6.0.0",
    "pytest-cov>=2.12.1,<3.0.0",
    "pytest>=6.2.5,<7.0.0",
    "setuptools>=58.1.0,<59.0.0",

    # Dependencies required for linting
    "flake8>=3.9.2,<4.0.0",
    "pylint>=2.17.7,<3.0.0"
]

# Configures which build system is used by UV to build the project
[build-system]
requires = [
    "hatchling>=0.8.0,<1.0.0",
    "hatch-vcs>=0.1.0,<1.0.0",
    "hatch-fancy-pypi-readme>=22.1.0,<23.0.0"
]
build-backend = "hatchling.build"

# Configures the Hatch-VCS plugin that is used to dynamically determine the version of the project based on the current Git tag
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { root = ".." }

# Configures the Hatch-VCS build hook, which is used to write the version of the project to the version file
[tool.hatch.build.hooks.vcs]
version-file = "corelay/version.py"

# Configures the Hatch Fancy PyPI Readme plugin to compose the content of the read me file from the project's read me file, which is located in the
# root directory of the repository
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "../README.md"
